# interactive-feedback-mcp

./: .gitignore  README.md  README_EN.md  RIPER-5-cursor-rule.txt  button_core.py  cleanup_temp_images.py  clipboard_image_widget.py  config.py  feedback_logic.py  feedback_ui.py  i18n.py  image_handler.py  pyproject.toml  quick_response_manager.py  temp_manager.py  ui_config.py  ui_dialogs.py  ui_events.py  ui_i18n.py  ui_layout.py  ui_performance.py  ui_settings.py  ui_utils.py
